gateway/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: gateway
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway
    spec:
      containers:
      - name: nginx
        image: gateway-image
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        command: ["/bin/sh"]
        args: ["-c", "exec nginx -g 'daemon off;'"]
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
